--- a/index2.html
+++ b/index2.html
@@ -62,12 +62,90 @@
         <div class="col-12 d-flex justify-content-center">
             <div class="card my-3" style="width:450px;">
                 <div class="card-header d-flex justify-content-between align-items-center">
-                    <h3>Primera Foto</h3>
+                    <h3>Lago</h3>
                     <p>23/08</p>
                 </div>
                 <div class="card-body">
                     <img src="https://i.picsum.photos/id/1011/5472/3648.jpg?hmac=Koo9845x2akkVzVFX3xxAc9BCkeGYA9VRVfLE4f0Zzk"
                     class="img-thumbnail">
+                </div>
+                <div class="card-footer text-muted">
+                  <div class="card-footer-first">
+                    <p><strong>57 Likes</strong></p>
+                  </div>
+                 <div class="card-footer-second">
+                    <p>No te estoy diciendo que será fácil, te estoy diciendo que valdrá la pena.</p>
+                 </div>
+                 <div class="row">
+                    <div class="col-6 d-flex""><i class="fa-regular fa-heart"></i> <p class="px-2"> Comment...</p></div>
+                    <div class="col-6 d-flex justify-content-end"><i class="fa-solid fa-ellipsis-vertical"></i></div>
+                 </div>
+                </div>
+              </div>
+        </div>
+       </div>
+       <div class="row">    
+        <div class="col-12 d-flex justify-content-center">
+            <div class="card my-3" style="width:450px;">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h3>Paisaje</h3>
+                    <p>05/25</p>
+                </div>
+                <div class="card-body">
+                    <img src="https://i.picsum.photos/id/1015/6000/4000.jpg?hmac=aHjb0fRa1t14DTIEBcoC12c5rAXOSwnVlaA5ujxPQ0I"
+                    class="img-thumbnail">
+                </div>
+                <div class="card-footer text-muted">
+                  <div class="card-footer-first">
+                    <p><strong>57 Likes</strong></p>
+                  </div>
+                 <div class="card-footer-second">
+                    <p>No te estoy diciendo que será fácil, te estoy diciendo que valdrá la pena.</p>
+                 </div>
+                 <div class="row">
+                    <div class="col-6 d-flex""><i class="fa-regular fa-heart"></i> <p class="px-2"> Comment...</p></div>
+                    <div class="col-6 d-flex justify-content-end"><i class="fa-solid fa-ellipsis-vertical"></i></div>
+                 </div>
+                </div>
+              </div>
+        </div>
+       </div>
+       <div class="row">    
+        <div class="col-12 d-flex justify-content-center">
+            <div class="card my-3" style="width:450px;">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h3>Atardecer</h3>
+                    <p>03/03</p>
+                </div>
+                <div class="card-body">
+                    <img src="https://i.picsum.photos/id/1016/3844/2563.jpg?hmac=WEryKFRvTdeae2aUrY-DHscSmZuyYI9jd_-p94stBvc"
+                    class="img-thumbnail">
+                </div>
+                <div class="card-footer text-muted">
+                  <div class="card-footer-first">
+                    <p><strong>57 Likes</strong></p>
+                  </div>
+                 <div class="card-footer-second">
+                    <p>No te estoy diciendo que será fácil, te estoy diciendo que valdrá la pena.</p>
+                 </div>
+                 <div class="row">
+                    <div class="col-6 d-flex""><i class="fa-regular fa-heart"></i> <p class="px-2"> Comment...</p></div>
+                    <div class="col-6 d-flex justify-content-end"><i class="fa-solid fa-ellipsis-vertical"></i></div>
+                 </div>
+                </div>
+              </div>
+        </div>
+       </div>
+       <div class="row">    
+        <div class="col-12 d-flex justify-content-center">
+            <div class="card my-3" style="width:450px;">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h3>Matrimonio</h3>
+                    <p>02/03</p>
+                </div>
+                <div class="card-body">
+                    <img src="https://i.picsum.photos/id/1013/4256/2832.jpg?hmac=UmYgZfqY_sNtHdug0Gd73bHFyf1VvzFWzPXSr5VTnDA"
+                        class="img-thumbnail">
                 </div>
                 <div class="card-footer text-muted">
                   <div class="card-footer-first">
@@ -94,7 +172,10 @@
             </div>
             <div class="modal-body">
               <input type="text" size="50">
-              <div></div>
+              <div>
+                <i class="fa-solid fa-camera"></i>
+                <i class="fa-solid fa-location-dot px-2"></i>
+              </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
