cambio de color nav

--- a/index2.html
+++ b/index2.html
@@ -16,14 +16,14 @@
 <body>
     <div class="header sticky-top">
         <nav class="navbar bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand"><i class="fa-brands fa-instagram"></i> Instagram</a>
+            <div class="container">
+                <a class="navbar-brand" style="color:grey"><i class="fa-brands fa-instagram"></i> Instagram</a>
                 <form class="d-flex" role="search">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Create new post
                       </button>
                     <div class="dropdown">
-                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <i class="fa-solid fa-gear"></i>
                         </a>
