--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 <body>
     <div class="header sticky-top">
         <nav class="navbar bg-light">
-            <div class="container">
+            <div class="container-fluid">
                 <a class="navbar-brand" style="color:grey"><i class="fa-brands fa-instagram"></i> Instagram</a>
                 <form class="d-flex" role="search">
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
